test/e2e/kind/kustomize/components/policies/helm-release-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: helm-releases
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: helm-release-mutate-helm
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource/status"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: helm
                  artifact: chart
      mutate:
        targets:
          - apiVersion: helm.toolkit.fluxcd.io/v2
            kind: HelmRelease
            name: "{{ request.object.metadata.name }}"
            namespace: "{{ request.object.metadata.namespace }}"
        patchStrategicMerge:
          spec:
            chart:
              spec:
                version: "{{request.object.status.resource.version}}"
    - name: helm-release-mutate-git-version
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource/status"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: git
                  artifact: chart
      mutate:
        targets:
          - apiVersion: helm.toolkit.fluxcd.io/v2
            kind: HelmRelease
            name: "{{ request.object.metadata.name }}"
            namespace: "{{ request.object.metadata.namespace }}"
        patchStrategicMerge:
          spec:
            chart:
              spec:
                version: "{{request.object.status.resource.version}}"
    - name: helm-release-mutate-oci-image
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource/status"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: oci
                  artifact: image
      mutate:
        targets:
          - apiVersion: helm.toolkit.fluxcd.io/v2
            kind: HelmRelease
            name: "{{ request.object.metadata.labels.component }}"
            namespace: "{{ request.object.metadata.namespace }}"
        patchStrategicMerge:
          spec:
            values:
              image:
                tag: "{{request.object.status.resource.version}}"
