test/e2e/kind/kustomize/components/policies/helm-repo-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: helm-repos
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: helm-repos-generate
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: helm
                  artifact: chart
      generate:
        # Only used for inital creation, a mutation rule will be used for updates
        synchronize: false
        apiVersion: source.toolkit.fluxcd.io/v1
        kind: HelmRepository
        name: "{{request.object.metadata.name}}"
        namespace: "{{request.object.metadata.namespace}}"
        data:
          spec:
            interval: 5m
            provider: generic
            url: "https://local-the-url-will-be-here-soon"
    - name: helm-release-mutate
      skipBackgroundRequests: false
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource/status"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: helm
                  artifact: chart
      mutate:
        targets:
          - apiVersion: source.toolkit.fluxcd.io/v1
            kind: HelmRepository
            name: "{{ request.object.metadata.name }}"
            namespace: "{{ request.object.metadata.namespace }}"
        patchStrategicMerge:
          spec:
            url: "{{ request.object.status.resource.access.helmRepository }}"
