test/e2e/kind/kustomize/components/policies/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  - helm-release-policy.yaml
  - helm-repo-policy.yaml
  - oci-repo-policy.yaml
  - git-repo-policy.yaml
  - kcp-workspace-auth-policy.yaml
