test/e2e/kind/kustomize/components/policies/oci-repo-policy.yaml
apiVersion: kyverno.io/v1

kind: ClusterPolicy
metadata:
  name: oci-repos
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: oci-repos-generate
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: oci
                  artifact: chart
      generate:
        # Only used for initial creation, a mutation rule will be used for updates
        synchronize: false
        apiVersion: source.toolkit.fluxcd.io/v1
        kind: OCIRepository
        name: "{{request.object.metadata.name}}"
        namespace: "{{request.object.metadata.namespace}}"
        data:
          spec:
            interval: 5m
            layerSelector:
              mediaType: "application/vnd.cncf.helm.chart.content.v1.tar+gzip"
              operation: copy
            ref:
              tag: "0.0.0"
            timeout: 60s
            url: "oci://local-the-url-will-be-here-soon"
    - name: oci-repos-mutate
#      skipBackgroundRequests: false
      match:
        any:
          - resources:
              kinds:
                - "delivery.ocm.software/v1alpha1/Resource/status"
              namespaces:
                - default
              selector:
                matchLabels:
                  repo: oci
                  artifact: chart
      mutate:
        targets:
          - apiVersion: source.toolkit.fluxcd.io/v1
            kind: OCIRepository
            name: "{{request.object.metadata.name}}"
            namespace: "{{request.object.metadata.namespace}}"
        patchStrategicMerge:
          spec:
            ref:
              tag: "{{ request.object.status.resource.version }}"
            url: |-
              oci://{{request.object.status.resource.access.imageReference | to_string(@) | replace(@, 'oci://','',`1`) | split(@, ':') | [0] }}
